--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,22 @@
-/* .App {
+.container {
+  position: absolute;
+  height: 40%;
+  width: 100%;
+  top: 20%;
+}
+
+Button {
+  color: #fff;
+  background-color: #6c757d;
+  border-color: #6c757d;
+  padding: .375rem .75rem;
   text-align: center;
+  vertical-align: middle;
+  display: inline-block;
+  font-weight: 400;
+  border: 1px solid transparent;
+  font-size: 1rem;
+  line-height: 1.5;
+  border-radius: .25rem;
+  margin: 2rem;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
