--- a/src/styles.css
+++ b/src/styles.css
@@ -1,28 +1,20 @@
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+
+
+.logo{
+    text-align: center;
+    margin-bottom: 10px;    
 }
 
-html {
-    font-family: sans-serif;
-    font-size: 1rem;
+.box_Layout{
+    background-color: #353d60;
+    padding: 40px 0;
+    height: 100%;
 }
 
-body {
-    background: #fff;
+.buttons{
+    width: 400px;
+    margin: auto;
 }
-
-.header {
-    background-color: #ffffff;
-    /* margin: auto -10px; */
-    padding: 10px 20px;
-    /* box-shadow: 0 0 2px 0 rgb(110, 110, 110);
-    flex-direction: row;
-    display: flex; */
-    align-items: center;
-}
-
 
 form {
     position: relative;
@@ -119,3 +111,9 @@ form p {
         width: 600px;
     }
 } */
+
+@media (max-height: 700px){
+    .container {
+        top: 10%;
+    }
+}
