--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,3 @@
-
-
 .logo{
     text-align: center;
     margin-bottom: 10px;    
@@ -36,14 +34,6 @@ form input {
     resize: none;
 }
 
-form textarea {
-    width: 100%;
-    padding: 4px 10px;
-    font-size: 1rem;
-    resize: none;
-    margin: 2px;
-}
-
 form button {
     display: flex;
     justify-content: center;
@@ -58,34 +48,12 @@ form button {
     outline: none;
 }
 
-
-.note {
-    background: #ffffff;
-    width: 240px;
-    border-radius: 7px;
-    padding: 10px;
-    margin: 16px;
-    float: left;
-    margin-right: 0;
-    border: 0.5px solid #555;
-}
-
 form span {
     color: red;
 }
 
 form p {
     padding: 10px 20px;
-}
-
-.note button {
-    position: relative;
-    float: right;
-    color: #f88651;
-    border: none;
-    background: none;
-    cursor: pointer;
-    outline: none;
 }
 
 /* @media screen and (max-device-width: 320px) {
@@ -112,8 +80,8 @@ form p {
     }
 } */
 
-@media (max-height: 700px){
+/* @media (max-height: 700px){
     .container {
         top: 10%;
     }
-}
+} */
